--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "test": "npm run unit",
     "build": "node build/build.js"
   },
   "dependencies": {
@@ -16,26 +14,29 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@vue/cli-plugin-unit-jest": "^4.5.10",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.7.0",
-    "core-js": "^3.6.4",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.8.2",
     "firebase": "^7.14.2",
     "firebaseui": "^4.7.1",
     "md5": "^2.2.1",
     "moment": "^2.29.1",
     "vue": "^2.5.2",
     "vue-flash-message": "^0.7.2",
-    "vue-router": "^3.4.8",
-    "vuetify": "^2.3.17",
-    "vuex": "^3.1.3",
+    "vue-router": "^3.4.9",
+    "vuetify": "^2.4.2",
+    "vuex": "^3.6.0",
     "vuex-persistedstate": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@vue/test-utils": "^1.1.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^21.0.2",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -52,7 +53,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.4",
+    "jest": "^22.4.4",
     "jest-serializer-vue": "^0.3.0",
     "js-md5": "^0.7.3",
     "node-notifier": "^5.1.2",
@@ -63,13 +64,13 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass": "^1.29.0",
+    "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-jest": "^1.0.2",
+    "vue-jest": "^1.4.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
